--- a/src/client/company-store/package.json
+++ b/src/client/company-store/package.json
@@ -11,15 +11,18 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "archiver": "^5.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "recoil": "^0.1.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "yargs": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node scripts/zip.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
