--- a/src/client/company-store/package.json
+++ b/src/client/company-store/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^7.165.1",
+    "@microsoft/mgt": "^2.1.0",
+    "@microsoft/mgt-element": "^2.1.0",
+    "@microsoft/mgt-react": "^2.1.0",
+    "@microsoft/mgt-teams-provider": "^2.1.0",
+    "@microsoft/teams-js": "^1.9.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
