--- a/src/client/company-store/package.json
+++ b/src/client/company-store/package.json
@@ -27,7 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node scripts/zip.js && react-scripts build",
+    "package": "node scripts/zip.js",
+    "build": " react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
