--- a/src/client/company-store/.publish/manifest.prod.json
+++ b/src/client/company-store/.publish/manifest.prod.json
@@ -2,8 +2,8 @@
   "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.8/MicrosoftTeams.schema.json",
   "manifestVersion": "1.8",
   "version": "1.0.0",
-  "id": "e04f66ed-bd45-4f6e-816a-3722cf17f355",
-  "packageName": "com.microsoft.teams.contoso.companystore.dev",
+  "id": "e9a2e6a2-8ca7-11eb-8dcd-0242ac130003",
+  "packageName": "com.microsoft.teams.contoso.companystore",
   "developer": {
     "name": "Contoso",
     "websiteUrl": "https://www.contoso.com",
@@ -15,7 +15,7 @@
     "outline": "outline.png"
   },
   "name": {
-    "short": "Company Store - Dev",
+    "short": "Company Store",
     "full": "Company Store for Microsoft Teams"
   },
   "description": {
@@ -27,8 +27,8 @@
     {
       "entityId": "index",
       "name": "Company Store",
-      "contentUrl": "https://localhost:3000",
-      "websiteUrl": "https://localhost:3000",
+      "contentUrl": "https://lemon-bush-075244a0f.azurestaticapps.net",
+      "websiteUrl": "https://lemon-bush-075244a0f.azurestaticapps.net",
       "scopes": ["personal"]
     }
   ],
