--- a/src/client/company-store/package.json
+++ b/src/client/company-store/package.json
@@ -16,7 +16,13 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "adaptive-expressions": "^4.12.0",
+    "adaptivecards": "^2.9.0",
+    "adaptivecards-fabric": "^1.1.2",
+    "adaptivecards-templating": "^2.1.0",
     "archiver": "^5.3.0",
+    "markdown-it": "^12.0.4",
+    "msal": "^1.4.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -51,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/markdown-it": "^12.0.1",
     "prettier": "^2.2.1"
   }
 }
