--- a/src/client/company-store/package.json
+++ b/src/client/company-store/package.json
@@ -16,20 +16,12 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
-    "adaptive-expressions": "^4.12.0",
-    "adaptivecards": "^2.9.0",
-    "adaptivecards-fabric": "^1.1.2",
-    "adaptivecards-templating": "^2.1.0",
-    "archiver": "^5.3.0",
-    "markdown-it": "^12.0.4",
     "msal": "^1.4.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "recoil": "^0.1.3",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1",
-    "yargs": "^16.2.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,7 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@types/markdown-it": "^12.0.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "archiver": "^5.3.0",
+    "yargs": "^16.2.0",
+    "typescript": "^4.2.3",
+    "@microsoft/microsoft-graph-types": "^1.34.0"
   }
 }
